# gameboy-emulator

./: .gitignore  Makefile  Makefile.am  README.md  TODO  commit.sh  configure.ac  gb.c  setup.sh
src/: Makefile.am  cartridge.c  cartridge.h  debug.c  debug.h  display.c  display.h  error.c  error.h  gb.c  make.sh  memory.c  memory.h  mock_cartridge.c  mock_cartridge.h  mock_debug.c  mock_debug.h  mock_display.c  mock_display.h  mock_error.c  mock_error.h  mock_gb.c  mock_helper.c  mock_helper.h  mock_memory.c  mock_memory.h  mock_opcode_attributes.c  mock_opcode_attributes.h  mock_opcode_wrappers.c  mock_opcode_wrappers.h  mock_preprocessor.h  mock_rom.c  mock_rom.h  mock_timer.c  mock_timer.h  mock_z80.c  mock_z80.h  opcode_attributes.c  opcode_attributes.h  opcode_wrappers.c  (+7 more)
tests/: Makefile.am  check_gb  check_gb.c  check_gb_memory.c  check_gb_opcode_attributes.c  check_gb_opcodes.c
