#cartridge.c  cartridge.h  display.c  display.h  error.c  error.h  make.sh  memory.c  memory.h  rom.c  rom.h  timer.c  timer.h  z80.c  z80.h
bin_PROGRAMS = gb
gb_SOURCES = gb.c cartridge.c  cartridge.h  debug.c debug.h display.c  display.h  error.c  error.h  make.sh  memory.c  memory.h  rom.c  rom.h  timer.c  timer.h  z80.c  z80.h
